--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,6 @@
     "monolog/monolog": "^2.0",
     "vlucas/phpdotenv": "^4.1",
     "guzzlehttp/guzzle": "^6.5",
-    "robmorgan/phinx": "^0.11.4",
     "illuminate/events": "^8.24",
     "phpmailer/phpmailer": "^6.1",
     "illuminate/database": "^8.24",
@@ -18,5 +17,9 @@
       "Server\\": "servers/http",
       "Violin\\": "servers/http/Library/Violin"
     }
+  },
+  "require-dev": {
+    "fakerphp/faker": "^1.24",
+    "robmorgan/phinx": "^0.11.4"
   }
 }
